--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "io-ts": "2.2.20",
     "jointz": "7.0.4",
     "json-decoder": "1.4.1",
+    "lizod": "0.2.7",
     "mol_data_all": "1.1.834",
     "myzod": "1.10.1",
     "ok-computer": "1.0.4",
